<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Google Image Searcher</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="searchStr">Search</string>
    <string name="SearchHEre">Search Here</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_image_displaty">Full Image</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="size_prompt">Choose a size</string>
    <string name="color_prompt">Choose a color</string>
    <string name="type_prompt">Choose a type</string>
    <string name="HintSearch">Enter website filter</string>

    <string-array name="size_array">
         <item ></item>
        <item >small</item>
        <item >medium</item>
        <item >large</item>
    </string-array>

	<string-array name="color_array">
	    <item ></item>
        <item >blue</item>
        <item >gray</item>
        <item >black</item>
        <item >green</item>
    </string-array>
    
	<string-array name="type_array">
	     <item ></item>
        <item >face</item>
        <item >photo</item>
        <item >clipart</item>
        <item >lineart</item>
    </string-array>
    
	
</resources>
